<resources>
    <string name="app_name">希美克</string>
    <string name="text_homePage">首页</string>
    <string name="text_news">最新动态</string>
    <string name="hint_inputpassword">请输入密码</string>
    <string name="hint_inputusername">请输入用户名</string>
    <string name="btn_login">登录</string>
    <string name="text_xmkjxs">希美克经销商</string>
    <string name="text_zxdt">最新动态</string>
    <string name="text_yuyanshezhi">Language</string>
    <string name="text_changepwd">修改密码</string>
    <string name="text_exit">退出</string>
    <string name="text_mypage">我的</string>
    <string name="hint_oldpwd">请输入原密码</string>
    <string name="hint_newpwd">请输入新密码</string>
    <string name="hint_newpwd2">确定新密码</string>
    <string name="btn_done">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_done">完成</string>
    <string name="text_chinese">简体中文</string>
    <string name="text_english">US English</string>
    <string name="text_nodata">暂无数据~</string>
    <string name="text_nonetwork">您的网络不稳定哦,请刷新重试~</string>
    <string name="btn_refresh">刷新</string>
    <string name="text_progress">处理中</string>
    <string name="error_emptyusername">用户名或密码不能为空</string>
    <string name="error_emptypwd">密码不能为空</string>
    <string name="text_tips">提示</string>
    <string name="text_logout">确定要退出登录吗?</string>
    <string name="text_logout_ok">确定</string>
    <string name="text_logout_cancel">取消</string>
    <string name="text_nofile">暂无文件</string>
    <string name="text_download">下载</string>
    <string name="text_ondown">下载中</string>
    <string name="text_retry">重试</string>
    <string name="text_open">打开</string>
    <string name="text_username">用户名</string>
    <string name="error_pwdnotsame">两次密码输入不一致</string>

    <string name="provider_file">com.pgyersdk.test.fileProvider</string>
</resources>
