<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@color/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:visibility="gone"
            app:riv_corner_radius="5dp"
            android:src="@mipmap/avatar"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/text_username"
                android:textColor="@color/text_1"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="15dp"
                android:text="@string/text_username"
                android:textColor="@color/text_3"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@color/background"/>

    <TextView
        android:id="@+id/yuyanshezhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/more"
        android:padding="15dp"
        android:text="@string/text_yuyanshezhi"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@color/background"/>

    <TextView
        android:id="@+id/changepwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/more"
        android:padding="15dp"
        android:text="@string/text_changepwd"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@color/background"/>

    <TextView
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/more"
        android:padding="15dp"
        android:text="@string/text_exit"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/background"/>
</LinearLayout>