<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@mipmap/logo1"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:hint="@string/hint_inputusername"
        android:imeOptions="actionNext"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:textColor="@color/text_2"
        android:textColorHint="@color/text_4"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:src="@color/icon1"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/hint_inputpassword"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:textColor="@color/text_2"
        android:textColorHint="@color/text_4"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:src="@color/icon1"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_btn"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="客  户  至  上  ,  诚  信  共  赢"
        android:textColor="@color/text_2"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="勇  于  创  新  ,  追  求  卓  越"
        android:textColor="@color/text_2"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="尊  重  包  容  ,  价  值  创  造"
        android:textColor="@color/text_2"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="20dp"
        android:textColor="@color/text_3"
        android:textSize="14sp"/>
</LinearLayout>